# knightfall

./: CMakeLists.txt  LICENSE  README.md  file.cpp
src/: main.cpp  play.cpp  vis_main.cpp
src/core/: attacks.cpp  attacks.h  bitboard.cpp  bitboard.h  board.cpp  board.h  move.h  movegen.cpp  movegen.h  types.h
src/protocol/: server.cpp  server.h  uci.cpp  uci.h
src/search/: evaluate.cpp  evaluate.h  search.cpp  search.h  tt.cpp  tt.h
tests/: perft.cpp
web/: index.html
